--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span class="text">Hours</span>
         </div>
         <div>
-            <span id="minuter">00</span>
+            <span id="minutes">00</span>
             <span class="text">Minutes</span>
         </div>
         <div>
@@ -23,8 +23,9 @@
             <span class="text">Seconds</span>
         </div>
         <div>
-            <span id="am/pm">AM</span>
+            <span id="ampm">AM</span>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
